# mty-django-firebase-auth

./: .gitignore  .gitlab-ci.yml  README.md  authentication.py  cloudbuild.yaml  pip.conf  pyproject.toml  setup.py
drf_firebase_auth/: __init__.py  apps.py  authentication.py  settings.py
drf_firebase_auth/migrations/: 0001_initial.py
mty_django_firebase_auth/: __init__.py  apps.py  authentication.py  middleware.py  settings.py
mty_django_firebase_auth/migrations/: 0001_initial.py  0002_initial.py
mty_firebase_auth/: __init__.py  apps.py  authentication.py  middleware.py  settings.py
mty_firebase_auth/migrations/: 0001_initial.py  0002_initial.py
testapp/api/: tests.py
testapp/testapp/: settings.py
