[project]
name = "mty_django_firebase_auth"
version = "0.1.7"
authors = [
  { name="Gobierno de Monterrey", email="desarrollo@monterrey.gob.mx" },
]
description = "Middleware de autenticación de firebase"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SIGAMty/mty-django-firebase-auth"
"Bug Tracker" = "https://github.com/SIGAMty/mty-django-firebase-auth/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"